1.3.7:
-Added Monero, Expanse, and Shift markets
-------------------------------------------------------------------

-------------------------------------------------------------------
1.3.8:
-Cleaned up low volume markets / resorted markets
-------------------------------------------------------------------

-------------------------------------------------------------------
1.3.9:
-Added STEEM Dollar market
-Added Advanced STEEM Power Interest / Power Down Calculator
-Tidied up minor things
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.0:
-Fixed STEEM interest calculator bug
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.1:
-Added STEEM / STEEM Dollars Poloniex markets
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.2:
-Added Ethereum Classic Poloniex market
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.3:
-Added Ethereum Classic Bittrex market
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.4:
-Added Ethereum Classic Kraken market
-Reduced STEEM Power Interest calculator to 3 month estimate maximum
-Fixed bugs when toggling the cookies settings on / off
-Optimized the configuration file format, to reduce uneeded clutter
-Other minor optimizations
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.5:
-Modularized content sections and libraries
-Used better semantics for naming modules
-Cleaned up code nesting / separation
-------------------------------------------------------------------























